--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -37,19 +37,19 @@ excerpt_link: more
 # 文章卡片右下角常驻链接，不需要请设置为false
 show_all_link: '展开全文'
 # 数学公式
-mathjax: false
+mathjax: true
 # 是否在新窗口打开链接
 open_in_new: false
 
 # 打赏
 # 打赏type设定：0-关闭打赏； 1-文章对应的md文件里有reward:true属性，才有打赏； 2-所有文章均有打赏
-reward_type: 2
+reward_type: 1
 # 打赏wording
 reward_wording: '谢谢你请我吃糖果'
 # 支付宝二维码图片地址，跟你设置头像的方式一样。比如：/assets/img/alipay.jpg
-alipay: 
+alipay: https://cdn.jsdelivr.net/gh/ysl970629/public_picture_bed_01@latest/img/2020-04-21 210252(1).jpg
 # 微信二维码图片地址
-weixin: 
+weixin: https://cdn.jsdelivr.net/gh/ysl970629/public_picture_bed_01@latest/img/2020-04-21 210252.jpg
 
 # 目录
 # 目录设定：0-不显示目录； 1-文章对应的md文件里有toc:true属性，才有目录； 2-所有文章均显示目录
@@ -68,7 +68,7 @@ google_analytics: ''
 favicon: /favicon.png
 
 #你的头像url
-avatar:
+avatar: https://cdn.jsdelivr.net/gh/ysl970629/public_picture_bed_01@latest//img/00头像.jpg
 
 #是否开启分享
 share_jia: true
@@ -120,11 +120,11 @@ smart_menu:
   aboutme: '关于我'
 
 friends:
-  友情链接1: http://localhost:4000/
-  友情链接2: http://localhost:4000/
-  友情链接3: http://localhost:4000/
-  友情链接4: http://localhost:4000/
-  友情链接5: http://localhost:4000/
-  友情链接6: http://localhost:4000/
+   山东财经大学教务系统: http://jw.sdufe.edu.cn/
+  # 友情链接2: http://localhost:4000/
+  # 友情链接3: http://localhost:4000/
+  # 友情链接4: http://localhost:4000/
+  # 友情链接5: http://localhost:4000/
+  # 友情链接6: http://localhost:4000/
 
-aboutme: 很惭愧<br><br>只做了一点微小的工作<br>谢谢大家
+aboutme: 虽然我是一名默默无闻的小卒<br><br>但我相信我也可以成为大佬<br>加油
