--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: ''
 description: ''
 keywords:
 author: YuSLi
-language: en
+language: zh-CN
 timezone: ''
 
 # URL
@@ -36,7 +36,7 @@ new_post_name: :title.md # File name of new posts
 default_layout: post
 titlecase: false # Transform title into titlecase
 external_link:
-  enable: true # Open external links in new tab
+  enable: flase # 不要从新窗口打开链接
   field: site # Apply to the whole site
   exclude: ''
 filename_case: 0
@@ -93,7 +93,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: yilia
+theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
