--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -233,7 +233,12 @@ chat:
 # ---------------------------------------------------------------
 
 # Automatically excerpt description in homepage as preamble text.
-excerpt_description: true
+excerpt_description: true # 阅读全文
+
+#自动截断不管用
+# auto_excerpt:
+#   enable: true
+#   length: 150
 
 # Read more button
 # If true, the read more button will be displayed in excerpt section.
