在网上意外发现了进度条，和去除了加载时的角标遮挡问题。一切正常，但是可能有代码重复

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -395,8 +395,8 @@ bookmark:
 
 # `Follow me on GitHub` banner in the top-right corner.
 github_banner:
-  enable: false
-  permalink: https://github.com/yourname
+  enable: true
+  permalink: https://github.com/ysl970629
   title: Follow me on GitHub
 
 
@@ -850,11 +850,11 @@ motion:
 # Dependencies: https://github.com/theme-next/theme-next-pace
 # For more information: https://github.com/HubSpot/pace
 pace:
-  enable: false
+  enable: true
   # Themes list:
   # big-counter | bounce | barber-shop | center-atom | center-circle | center-radar | center-simple
   # corner-indicator | fill-left | flat-top | flash | loading-bar | mac-osx | material | minimal
-  theme: minimal
+  theme: corner-indicator
 
 # JavaScript 3D library.
 # Dependencies: https://github.com/theme-next/theme-next-three
