--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -616,16 +616,16 @@ changyan:
 # Valine
 # For more information: https://valine.js.org, https://github.com/xCss/Valine
 valine:
-  enable: false
-  appid: # Your leancloud application appid
-  appkey: # Your leancloud application appkey
+  enable: true
+  appid: WY2acwKFFAITL4uJwrUaASlB-gzGzoHsz
+  appkey: bzFm2PGHb9bMQaKW2yFW8rK8
   notify: false # Mail notifier
   verify: false # Verification code
-  placeholder: Just go go # Comment box placeholder
-  avatar: mm # Gravatar style
+  placeholder: 写下你的评论... # Comment box placeholder
+  avatar: mm # Gravatar style # varline的头像
   guest_info: nick,mail,link # Custom comment header
   pageSize: 10 # Pagination size
-  language: # Language, available values: en, zh-cn
+  language: zh-CN # Language, available values: en, zh-cn
   visitor: false # Article reading statistic
   comment_count: true # If false, comment count will only be displayed in post page, not in home page
   recordIP: false # Whether to record the commenter IP
