--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -625,7 +625,7 @@ valine:
   avatar: mm # Gravatar style # varline的头像
   guest_info: nick,mail,link # Custom comment header
   pageSize: 10 # Pagination size
-  language: zh-CN # Language, available values: en, zh-cn
+  language: #zh-CN # Language, available values: en, zh-cn
   visitor: false # Article reading statistic
   comment_count: true # If false, comment count will only be displayed in post page, not in home page
   recordIP: false # Whether to record the commenter IP
@@ -634,17 +634,17 @@ valine:
 
 # LiveRe comments system
 # You can get your uid from https://livere.com/insight/myCode (General web site)
-livere_uid: # <your_uid>
+livere_uid: MTAyMC80OTgxMS8yNjMwMg== # <your_uid>
 
 # Gitalk
 # For more information: https://gitalk.github.io, https://github.com/gitalk/gitalk
 gitalk:
   enable: false
-  github_id: # GitHub repo owner
-  repo: # Repository name to store issues
-  client_id: # GitHub Application Client ID
-  client_secret: # GitHub Application Client Secret
-  admin_user: # GitHub repo owner and collaborators, only these guys can initialize gitHub issues
+  github_id: #ysl970629 # GitHub repo owner
+  repo: #ysl970629/gitalk_commit_system # Repository name to store issues
+  client_id: #17f6a3cf1ebfc2084b06 # GitHub Application Client ID
+  client_secret: #3e5b6fb5851db9227ad554d6fe8fdb75fa764d79 # GitHub Application Client Secret
+  admin_user: #ysl970629 # GitHub repo owner and collaborators, only these guys can initialize gitHub issues
   distraction_free_mode: true # Facebook-like distraction free mode
   # Gitalk's display language depends on user's browser or system environment
   # If you want everyone visiting your site to see a uniform language, you can set a force language value
