--- a/_config.yml
+++ b/_config.yml
@@ -122,3 +122,9 @@ jsonContent:
     excerpt: false
     categories: false
     tags: true
+
+search:
+  path: search.xml
+  field: post
+  content: true
+  format: html
