增加内容分享服务成功，一切顺利

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -666,7 +666,7 @@ rating:
 
 # AddThis Share. See: https://www.addthis.com
 # Go to https://www.addthis.com/dashboard to customize your tools.
-add_this_id:
+add_this_id: ra-5ea06d5599cae9f7
 
 
 # ---------------------------------------------------------------
