--- a/_config.yml
+++ b/_config.yml
@@ -128,3 +128,13 @@ search:
   field: post
   content: true
   format: html
+
+symbols_count_time:
+  symbols: true
+  time: true
+  total_symbols: true
+  total_time: true
+  exclude_codeblock: false
+  awl: 2
+  wpm: 300
+  suffix: "mins."
