--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ script:
   - hexo generate # generate static files
 deploy:
   provider: pages
-  skip-cleanup: true
+  skip-cleanup: false
   github-token: $GH_TOKEN
   keep-history: true
   on:
-    branch: soueces
+    branch: master
   local-dir: public
