--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,60 @@
-sudo: false
+# sudo: false
+# language: node_js
+# node_js:
+#   - 10 # use nodejs v10 LTS
+# cache: npm
+# branches:
+#   only:
+#     - sources # build master branch only
+# script:
+#   - hexo generate # generate static files
+# deploy:
+#   provider: pages
+#   skip-cleanup: false
+#   github-token: $GH_TOKEN
+#   keep-history: true
+#   on:
+#     branch: master
+#   local-dir: public
+
 language: node_js
-node_js:
-  - 10 # use nodejs v10 LTS
-cache: npm
+node_js: stable
+
+cache:
+  directories:
+    - node_modules
+
 branches:
   only:
-    - sources # build master branch only
+    - sources
+
+before_install:
+  - npm install -g hexo-cli
+  
+
+# S: Build Lifecycle
+install:
+  - npm install
+  - npm install hexo-deployer-git --save
+
+
+# before_script:
+ # - npm install -g gulp
+    
 script:
-  - hexo generate # generate static files
-deploy:
-  provider: pages
-  skip-cleanup: false
-  github-token: $GH_TOKEN
-  keep-history: true
-  on:
-    branch: master
-  local-dir: public
+  - hexo cl
+  - hexo g
+
+after_script:
+ - cd ./public
+ - git init
+ - git config user.name "1097985743"
+ - git config user.email "1097985743@qq.com"
+ - git add .
+ - git commit -m "Update docs"
+ - git push --force --quiet "${GH_TOKEN}@${GH_REF}" master:master
+  # - sed -i "s/Tr
+
+env:
+ global:
+   - GH_REF: github.com/ysl970629/sources.git
