--- a/.travis.yml
+++ b/.travis.yml
@@ -1,60 +1,59 @@
-# sudo: false
-# language: node_js
-# node_js:
-#   - 10 # use nodejs v10 LTS
-# cache: npm
-# branches:
-#   only:
-#     - sources # build master branch only
-# script:
-#   - hexo generate # generate static files
-# deploy:
-#   provider: pages
-#   skip-cleanup: false
-#   github-token: $GH_TOKEN
-#   keep-history: true
-#   on:
-#     branch: master
-#   local-dir: public
-
+sudo: false
 language: node_js
-node_js: stable
-
-cache:
-  directories:
-    - node_modules
-
+node_js:
+  - 10 # use nodejs v10 LTS
+cache: npm
 branches:
   only:
-    - sources
-
-before_install:
-  - npm install -g hexo-cli
-  
-
-# S: Build Lifecycle
-install:
-  - npm install
-  - npm install hexo-deployer-git --save
-
-
-# before_script:
- # - npm install -g gulp
-    
+    - sources # build master branch only
 script:
-  - hexo cl
-  - hexo g
+  - hexo generate # generate static files
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $GH_TOKEN
+  keep-history: true
+  on:
+    branch: sources
+  local-dir: public
 
-after_script:
- - cd ./public
- - git init
- - git config user.name "1097985743"
- - git config user.email "1097985743@qq.com"
- - git add .
- - git commit -m "Update docs"
- - git push --force --quiet "${GH_TOKEN}@${GH_REF}" master:master
-  # - sed -i "s/Tr
+# language: node_js
+# node_js: stable
+# sudo: required
+# cache:
+#   directories:
+#     - node_modules
 
-env:
- global:
-   - GH_REF: https://github.com/ysl970629/ysl970629.github.io.git
+# branches:
+#   only:
+#     - sources
+
+# before_install:
+#   - npm install -g cnpm --registry=https://registry.npm.taobao.org
+#   - cnpm install -g hexo-cli
+
+# # Start: Build Lifecycle
+# install:
+#   - cnpm install
+#   - cnpm install hexo-deployer-git --save
+
+# # before_script:
+#  # - npm install -g gulp
+    
+# script:
+#   - hexo clean
+#   - hexo generate
+
+# after_script:
+#  - cd ./public
+#  - git init
+#  - git config user.name "1097985743"
+#  - git config user.email "1097985743@qq.com"
+#  - git add .
+#  - git commit -m "Update docs"
+#  - git push --force --quiet "${GH_TOKEN}@${GH_REF}" master:master
+#   # - sed -i "s/Tr
+
+# env:
+#  global:
+#    - GH_REF: https://github.com/ysl970629/ysl970629.github.io.git
