--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,21 @@
-sudo: false
-language: node_js
-node_js:
-  - 10 # use nodejs v10 LTS
-cache: npm
-branches:
-  only:
-    - sources # build master branch only
-script:
-  - hexo generate # generate static files
-deploy:
-  provider: pages
-  skip-cleanup: true
-  github-token: $GH_TOKEN
-  keep-history: true
-  on:
-    branch: sources
-  local-dir: public
+# sudo: false
+# language: node_js
+# node_js:
+#   - 10 # use nodejs v10 LTS
+# cache: npm
+# branches:
+#   only:
+#     - sources # build master branch only
+# script:
+#   - hexo generate # generate static files
+# deploy:
+#   provider: pages
+#   skip-cleanup: true
+#   github-token: $GH_TOKEN
+#   keep-history: true
+#   on:
+#     branch: sources
+#   local-dir: public
 
 # language: node_js
 # node_js: stable
@@ -57,3 +57,31 @@ deploy:
 # env:
 #  global:
 #    - GH_REF: https://github.com/ysl970629/ysl970629.github.io.git
+language: node_js
+node_js: stable
+
+install: 
+- npm install
+
+script: 
+- hexo cl
+- hexo g
+
+after_script: 
+- cd ./public 
+- git init 
+- git config user.name "ysl970629"
+- git config user.email "1097985743@qq.com" 
+- git add . 
+- git commit -m "Update docs with TRAVIS-CI."
+- git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
+# E: Build LifeCycle
+
+branches: 
+  only: 
+    - sources
+
+env: 
+  global: 
+    # 使用https, 若使用ssh会出错
+    - GH_REF: github.com/ysl970629/ysl970629.github.io.git 
