--- a/.travis.yml
+++ b/.travis.yml
@@ -75,6 +75,7 @@ after_script:
 - git add . 
 - git commit -m "Update docs with TRAVIS-CI."
 - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
+- hexo d
 # E: Build LifeCycle
 
 branches: 
