--- a/.travis.yml
+++ b/.travis.yml
@@ -24,10 +24,11 @@ before_install:
 #安装git插件和搜索功能插件
 install:
   - npm install
-
+  - npm install hexo-deployer-git --save
+  
   # 设置git提交名，邮箱；替换真实token到_config.yml文件
 before_script:
-  - git config user.name "1097985743"
+  - git config user.name "ysl970629"
   - git config user.email "1097985743@qq.com"
   # 替换同目录下的_config.yml文件中github_token字符串为travis后台刚才配置的变量，注>意此处sed命令用了双引号。单引号无效！
   - sed -i "s/github_token/${GH_TOKEN}/g" _config.yml || exit 1
