--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -200,9 +200,10 @@ links_settings:
   # Available values: block | inline
   layout: block
 
-links:
+links: # 友情链接
   山东财经大学教务系统: http://jw.sdufe.edu.cn/
   山财大疫情区块链系统: http://bcfl.sdufe.edu.cn/index/login
+  hexo-theme-next博客主页: https://theme-next.org/
 
 # Table of Contents in the Sidebar
 # Front-matter variable (unsupport wrap expand_all).
