--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -103,7 +103,7 @@ scheme: Muse
 #scheme: Gemini
 
 # Dark Mode 黑暗 夜间 暗黑 深色
-darkmode: false
+darkmode: true
 
 
 # ---------------------------------------------------------------
