--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -97,10 +97,10 @@ creative_commons:
 # ---------------------------------------------------------------
 
 # Schemes #主题 样式
-scheme: Muse
+#scheme: Muse
 #scheme: Mist
 #scheme: Pisces
-#scheme: Gemini
+scheme: Gemini
 
 # Dark Mode 黑暗 夜间 暗黑 深色
 darkmode: true
