--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -270,7 +270,7 @@ reward_settings:
   # If true, reward will be displayed in every article by default.
   enable: true
   animation: false
-  comment: 谢谢你请我吃糖果
+  comment: 
 
 reward:
   wechatpay: https://cdn.jsdelivr.net/gh/ysl970629/public_picture_bed_01@latest/img/2020-04-21 210252.jpg
@@ -667,8 +667,7 @@ rating:
 
 # AddThis Share. See: https://www.addthis.com
 # Go to https://www.addthis.com/dashboard to customize your tools.
-add_this_id: ra-5ea06d5599cae9f7
-
+add_this_id: ra-5ea18456ed920478
 
 # ---------------------------------------------------------------
 # Statistics and Analytics
