--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,10 @@ timezone: ''
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://yoursite.com/ #http://ysl970629.github.io
 root: /
-permalink: :year/:month/:day/:title/
+permalink: posts/:abbrlink #:year/:month/:day/:title/
+abbrlink:
+    alg: crc32   #算法： crc16(default) and crc32
+    rep: hex     #进制： dec(default) and hex
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
