--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,17 @@ timezone: ''
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://ysl970629.github.io #http://yoursite.com/ 
+url: http://yoursite.com/ #http://ysl970629.github.io #
 root: /
-permalink: :abbrlink #:year/:month/:day/:title/
+# permalink: :year/:month/:day/:title/
+permalink: posts/:abbrlink/
 abbrlink:
     alg: crc32   #算法： crc16(default) and crc32
     rep: hex     #进制： dec(default) and hex
-permalink_defaults:
+# permalink_defaults:
 pretty_urls:
-  trailing_index: false # Set to false to remove trailing 'index.html' from permalinks
-  trailing_html: false # Set to false to remove trailing '.html' from permalinks
+  trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
+  trailing_html: true # Set to false to remove trailing '.html' from permalinks
 
 # Directory
 source_dir: source
