--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com/ #http://ysl970629.github.io #
+url: http://ysl970629.github.io #http://yoursite.com/  #
 root: /
 # permalink: :year/:month/:day/:title/
 permalink: posts/:abbrlink/
