--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ node_js: 12
 env:
  global:
    - URL_REPO: github.com/ysl970629/ysl970629.github.io.git
-   - CO_REF: git.coding.net/myheap/ysl970629.coding.me.git
+   - CO_REF: e.coding.net/myheap/ysl970629.coding.me/ysl970629.coding.me.git
 
 # 设置钩子只检测blog-source分支的push变动
 branches:
