测试双部署 6

--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,8 @@ deploy:
 - type: git
   #repo: https://coding_token@e.coding.net/myheap/ysl970629.coding.me/ysl970629.coding.me.git
   # repo: https://myheap:coding_token@git.coding.net/ysl970629.coding.me/ysl970629.coding.me.git
-  repo: https://coding_token@e.coding.net:myheap/ysl970629.coding.me/ysl970629.coding.me.git
+  # repo: https://coding_token@e.coding.net:myheap/ysl970629.coding.me/ysl970629.coding.me.git
+  repo: https://coding_token@e.coding.net/myheap/ysl970629.git
   branch: master
 
 # yilia主题的作者要求添加的东西：
