添加代码块高亮，但是单行代码高亮依然没有解决

--- a/_config.yml
+++ b/_config.yml
@@ -51,9 +51,9 @@ future: true
 highlight:
   enable: true
   line_number: true
-  auto_detect: false
+  auto_detect: true
   tab_replace: ''
-  wrap: true
+  wrap: false
   hljs: false
 
 # Home page setting
