--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -357,11 +357,11 @@ android_chrome_color: "#222"
 # Custom Logo (Do not support scheme Mist)
 custom_logo: #/uploads/custom-logo.jpg
 
-codeblock:
+codeblock: # 代码块
   # Code Highlight theme
   # Available values: normal | night | night eighties | night blue | night bright | solarized | solarized dark | galactic
   # See: https://github.com/chriskempson/tomorrow-theme
-  highlight_theme: normal
+  highlight_theme: night eighties #normal
   # Add copy button on codeblock
   copy_button:
     enable: false
