换了coding的token，现在可以保证coding的token没有问题

--- a/_config.yml
+++ b/_config.yml
@@ -113,6 +113,7 @@ deploy:
 #   # repo: https://myheap:coding_token@git.coding.net/ysl970629.coding.me/ysl970629.coding.me.git
 #   # repo: https://coding_token@e.coding.net:myheap/ysl970629.coding.me/ysl970629.coding.me.git
 #   repo: https://coding_token@e.coding.net/myheap/ysl970629.git
+#e.coding.net/myheap/ysl970629.coding.me/ysl970629.coding.me.git
 #   branch: master
 
 # yilia主题的作者要求添加的东西：
