--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ node_js: 12
 env:
  global:
    - URL_REPO: github.com/ysl970629/ysl970629.github.io.git
-   - CO_REF: e.coding.net/myheap/ysl970629.coding.me/ysl970629.coding.me.git
+   - CO_REF: e.coding.net/myheap/ysl970629.coding.me.git
 
 # 设置钩子只检测blog-source分支的push变动
 branches:
@@ -33,7 +33,7 @@ before_script:
   - git config user.email "1097985743@qq.com"
   # 替换同目录下的_config.yml文件中github_token字符串为travis后台刚才配置的变量，注>意此处sed命令用了双引号。单引号无效！
   - sed -i "s/github_token/${GH_TOKEN}/g" _config.yml || exit 1
-  #- sed -i "s/coding_token/${IXCZXIaKzJ}/g" _config.yml || exit 1 
+  - sed -i "s/coding_token/${IXCZXIaKzJ}/g" _config.yml || exit 1 
 
 # 执行清缓存，生成网页操作
 script:
