--- a/_config.yml
+++ b/_config.yml
@@ -102,19 +102,19 @@ theme: next
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-#- 
-  type: git
+- type: git
     #repo: git@github.com:ysl970629/ysl970629.github.io.git
     #下方的gh_token会被.travis.yml中sed命令替换
   repo: https://github_token@github.com/ysl970629/ysl970629.github.io.git
   branch: master
-# - type: git
+- type: git
 #   #repo: https://coding_token@e.coding.net/myheap/ysl970629.coding.me/ysl970629.coding.me.git
 #   # repo: https://myheap:coding_token@git.coding.net/ysl970629.coding.me/ysl970629.coding.me.git
 #   # repo: https://coding_token@e.coding.net:myheap/ysl970629.coding.me/ysl970629.coding.me.git
-#   repo: https://coding_token@e.coding.net/myheap/ysl970629.git
+#  repo: https://coding_token@e.coding.net/myheap/ysl970629.git
+  repo: https://coding_token@e.coding.net/myheap/ysl970629.coding.me.git
 #e.coding.net/myheap/ysl970629.coding.me/ysl970629.coding.me.git
-#   branch: master
+  branch: master
 
 # yilia主题的作者要求添加的东西：
 
