--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ deploy:
   repo: https://github_token@github.com/ysl970629/ysl970629.github.io.git
   branch: master
 - type: git
-  repo: https://myheap:coding_token@git.coding.net/ysl970629/ysl970629.coding.me.git
+  repo: https://ysl970629:coding_token@git.coding.net/ysl970629/ysl970629.coding.me.git
   branch: master
 
 # yilia主题的作者要求添加的东西：
