--- a/_config.yml
+++ b/_config.yml
@@ -102,16 +102,15 @@ theme: next
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type: git
+- type: git
     #repo: git@github.com:ysl970629/ysl970629.github.io.git
     #下方的gh_token会被.travis.yml中sed命令替换
   repo: 
     https://github_token@github.com/ysl970629/ysl970629.github.io.git
-    https://IXCZXIaKzJ:coding_token@e.coding.net/myheap/ysl970629.coding.me.git
   branch: master
-# - type: git
-#   repo: https://ysl970629:coding_token@git.coding.net/ysl970629/ysl970629.coding.me.git
-#   branch: master
+- type: git
+  repo: https://IXCZXIaKzJ:coding_token@e.coding.net/myheap/ysl970629.coding.me.git
+  branch: master
 
 # yilia主题的作者要求添加的东西：
 
