--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: ''
 keywords:
 author: YuSLi
 language: zh-CN
-timezone: ''
+timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
@@ -355,7 +355,9 @@ theme_config:
   links: # 友情链接
     山东财经大学教务系统: http://jw.sdufe.edu.cn/
     hexo-theme-next博客主页: https://theme-next.org/
-    coding升级公告: https://coding.net/products/upgrade
+    本站国外地址: https://ysl970629.github.io/
+    本站国内镜像地址: https://ajq7rq.coding-pages.com/
+    
 
   # Table of Contents in the Sidebar
   # Front-matter variable (unsupport wrap expand_all).
