--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ meta_generator: true
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
 ## Use post's date for updated date unless set in front-matter
-use_date_for_updated: false
+use_date_for_updated: true # 文章更新日期
 
 # Pagination
 ## Set per_page to 0 to disable pagination
