--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ meta_generator: true
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
 ## Use post's date for updated date unless set in front-matter
-use_date_for_updated: true # 文章更新日期
+use_date_for_updated: false # 文章更新日期
 
 # Pagination
 ## Set per_page to 0 to disable pagination
@@ -405,7 +405,7 @@ theme_config:
     created_at: true
     updated_at:
       enable: true
-      another_day: true
+      another_day: false
     categories: true
 
   # Post wordcount display settings
@@ -533,7 +533,7 @@ theme_config:
 
   # Reading progress bar
   reading_progress:
-    enable: false
+    enable: true
     # Available values: top | bottom
     position: top
     color: "#37c6c0"
