修改个人资料

--- a/_config.yml
+++ b/_config.yml
@@ -356,6 +356,8 @@ theme_config:
     山东财经大学教务系统: http://jw.sdufe.edu.cn/
     hexo-theme-next博客主页: https://theme-next.org/
     pro-git-book: https://git-scm.com/book/zh/v2
+    廖雪峰的博客: https://www.liaoxuefeng.com/ 
+    鸟哥的linux私房菜: http://linux.vbird.org/
     本站国外地址: https://ysl970629.github.io/
     本站国内镜像地址: https://ajq7rq.coding-pages.com/
 
